--- a/src/main/resources/templates/fragments/nav-bar.html
+++ b/src/main/resources/templates/fragments/nav-bar.html
@@ -9,7 +9,10 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
-					<a class="nav-link" href="/roadcasting/list">방송목록</a>
+					<a class="nav-link" href="/room/list">방송목록</a>
+				</li>
+				<li class="nav-item" sec:authorize="isAuthenticated()">
+					<a class="nav-link" href="/room/create">방송하기</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/member/login" sec:authorize="isAnonymous()">로그인</a>
@@ -17,7 +20,7 @@
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/member/sign-up" sec:authorize="isAnonymous()">회원가입</a>
-					<a class="nav-link" href="/member/delete" sec:authorize="isAuthenticated()">탈퇴하기</a>
+					<a class="nav-link" href="/member/delete" sec:authorize="isAuthenticated()">회원탈퇴</a>
 				</li>
 			</ul>
 		</div>
