--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -7,7 +7,7 @@
             <h4>회원가입</h4>
         </div>
     </div>
-    <form th:action="@{/member/sign-up}" th:object="${memberCreateForm}" method="post">
+    <form th:action="@{/member/sign-up}" th:object="${memberCreateDto}" method="post">
         <div th:each="err : ${#fields.allErrors()}">[[${err}]]</div>
         <div class="mb-3">
             <label for="username" class="form-label">사용자ID</label>
