--- a/src/main/resources/templates/room-create.html
+++ b/src/main/resources/templates/room-create.html
@@ -6,8 +6,10 @@
 		<label for="username" class="form-label">방송제목</label>
 		<input type="text" name="subject" id="subject" class="form-control">
 	</div>
+	<video id="localVideo" autoplay mute></video>
 	<button id="start" type="button" class="btn btn-primary">방송시작</button>
 	<a href="/room/delete" class="btn btn-primary">방송종료</a>
+	<button id="changeMedia" type="button" class="btn btn-primary">화면선택</button>
 	<div id="room"></div>
 	<div id="sender">[[${#authentication.name}]]</div>
 	<div id="streamer">[[${#authentication.name}]]</div>	
@@ -22,9 +24,12 @@
 	<script th:src="@{/js/sockjs.min.js}"></script>
 	<script th:src="@{/js/stomp.min.js}"></script>
 	<script th:src="@{/js/chat.js}"></script>
+	<script th:src="@{/js/webrtc-streamer.js}"></script>
 	<script>
 		window.onload = function () {
 			createRoom();
+			//getMedia();
+			document.querySelector("#changeMedia").addEventListener("click",getMedia);
 		}
 		let subject;
 
