방송화면 최적화

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,6 +1,22 @@
 @charset "UTF-8";
 @import url("reset.css");
 
-.drawer{
-	height:93dvh;
+video {
+    width: 60%;
+    border-radius: 5px;
+    border: 1px solid black;
+    background-color: black;
+}
+
+#chat{
+	width:40%;
+}
+
+#chatView{
+	width: 70%;
+	overflow-y: scroll;
+}
+#viewList{
+	width: 30%;
+	overflow-y: scroll;
 }
