--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,22 +2,23 @@
 <html lang="ko" data-theme="winter">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-    <meta name="_csrf" th:content="${_csrf.token}"/>
-	<meta name="_csrf_header" th:content="${_csrf.headerName}"/>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
-    <link rel="stylesheet" th:href="@{/css/style.css}" />
-    <script th:src="@{/js/jquery-3.6.1.min.js}"></script>
-    <title>ToyLive</title>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+	<meta name="_csrf" th:content="${_csrf.token}" />
+	<meta name="_csrf_header" th:content="${_csrf.headerName}" />
+	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/style.css}" />
+	<script th:src="@{/js/jquery-3.6.1.min.js}"></script>
+	<title>ToyLive</title>
 </head>
 
 <body>
-    <nav th:replace="fragments/nav-bar"></nav>
-    
-    <th:block layout:fragment="content"></th:block>
-    
-    <script th:src="@{/js/bootstrap.min.js}"></script>
+	<nav th:replace="fragments/nav-bar"></nav>
+	<div class="container">
+		<th:block layout:fragment="content"></th:block>
+	</div>
+
+	<script th:src="@{/js/bootstrap.min.js}"></script>
 	<script th:src="@{/js/main.js}"></script>
 </body>
 
